force-app/main/default/objects/ADM_Scrum_Team_Cache__c/ADM_Scrum_Team_Cache__c.object-meta.xml
<CustomObject>
    <description>Used for action chaining since you can no longer create a setup object when conducting any type of DML with a custom object. Specifically we will later look at all of the scrum team cache objects that we&#39;ve inserted to create Groups</description>
    <label>Scrum Team Cache</label>
    <nameField>
        <displayFormat>STC-{00000}</displayFormat>
        <label>Scrum Team Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scrum Team Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>