force-app/main/default/objects/ADM_Scrum_Team_Cache__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a corresponding scrum team record was deleted causing this record to be created</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>