force-app/main/default/objects/ADM_Scrum_Team_Cache__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <description>Used to delete group memberships</description>
    <label>Group ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>