force-app/main/default/objects/ADM_Scrum_Team_Cache__c/fields/Inserted__c.field-meta.xml
<CustomField>
    <fullName>Inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a corresponding scrum team record was inserted causing this record to be created</description>
    <label>Inserted</label>
    <type>Checkbox</type>
</CustomField>