force-app/main/default/objects/ADM_Scrum_Team_Cache__c/fields/ScrumteamOrScrumteamMember__c.field-meta.xml
<CustomField>
    <fullName>ScrumteamOrScrumteamMember__c</fullName>
    <description>Using text field instead because we will be creating objects after scrum teams have been deleted to clean up the setup object called Group which would cause an error if this was a lookup field!</description>
    <label>Scrumteam Or Scrumteam Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>