force-app/main/default/objects/ADM_Scrum_Team_Cache__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>ScrumteamOrScrumteamMember__c</columns>
    <columns>Deleted__c</columns>
    <columns>Inserted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>